revised package.json name field. revised navbar index.js

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tuiter-react-web-app",
+  "name": "webdev-final-project-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
