--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "bootswatch": "^5.2.2",
