--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "bootswatch": "^5.2.2",
+    "html-react-parser": "^3.0.4",
     "jquery": "^3.6.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
